--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@sentry/angular": "^6.10.0",
+    "@sentry/tracing": "^6.10.0",
     "firebase": "^8.6.7",
     "flexboxgrid": "^6.3.1",
     "rxjs": "~6.6.0",
